--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -67,32 +67,32 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Emacs Lisp</h1>
-<div class="title-date">2020년 4월 19일 수정</div>
+<div class="title-date">2020년 4월 25일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3221783">개념 메모</a>
+<li><a href="#org8394a6f">개념 메모</a>
 <ul>
-<li><a href="#org7bd6b0d">샤프(Sharpsign)</a></li>
-<li><a href="#org4a4740c">단 따옴표(Single Quote)</a></li>
-<li><a href="#org11b0da5">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org9882239">apply vs funcall</a></li>
-<li><a href="#orgfd41a96">Character</a></li>
-<li><a href="#org4f6af6a">setq vs setq-default</a></li>
-<li><a href="#org7d78a0c">Comma and Back-Quote</a></li>
+<li><a href="#org897ac53">샤프(Sharpsign)</a></li>
+<li><a href="#org67a4b88">단 따옴표(Single Quote)</a></li>
+<li><a href="#org5099b91">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org55474f3">apply vs funcall</a></li>
+<li><a href="#org0fa3f8f">Character</a></li>
+<li><a href="#org6256153">setq vs setq-default</a></li>
+<li><a href="#org623830c">Comma and Back-Quote</a></li>
 </ul>
 </li>
-<li><a href="#org17de394">코드 예제</a>
+<li><a href="#org7ce6672">코드 예제</a>
 <ul>
-<li><a href="#org2986720">타입 변환</a></li>
-<li><a href="#orgd4c19b7">셸 커맨드</a></li>
+<li><a href="#orgadde3c8">타입 변환</a></li>
+<li><a href="#org49ca1b5">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#org2d24ab5">에러 노트</a>
+<li><a href="#orgdcd62d2">에러 노트</a>
 <ul>
-<li><a href="#org4d682d5">commandp</a></li>
-<li><a href="#orgbdd7280">안 쓰는 매개변수</a></li>
+<li><a href="#orga0ba007">commandp</a></li>
+<li><a href="#orgc0bafef">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -105,13 +105,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org3221783" class="outline-2">
-<h2 id="org3221783">개념 메모</h2>
-<div class="outline-text-2" id="text-org3221783">
+<div id="outline-container-org8394a6f" class="outline-2">
+<h2 id="org8394a6f">개념 메모</h2>
+<div class="outline-text-2" id="text-org8394a6f">
 </div>
-<div id="outline-container-org7bd6b0d" class="outline-3">
-<h3 id="org7bd6b0d">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-org7bd6b0d">
+<div id="outline-container-org897ac53" class="outline-3">
+<h3 id="org897ac53">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org897ac53">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -131,9 +131,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4a4740c" class="outline-3">
-<h3 id="org4a4740c">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-org4a4740c">
+<div id="outline-container-org67a4b88" class="outline-3">
+<h3 id="org67a4b88">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-org67a4b88">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -174,9 +174,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org11b0da5" class="outline-3">
-<h3 id="org11b0da5">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org11b0da5">
+<div id="outline-container-org5099b91" class="outline-3">
+<h3 id="org5099b91">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org5099b91">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -198,9 +198,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org9882239" class="outline-3">
-<h3 id="org9882239">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org9882239">
+<div id="outline-container-org55474f3" class="outline-3">
+<h3 id="org55474f3">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org55474f3">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -211,7 +211,7 @@ Lisp 언어를 의미한다.
 </pre>
 </div>
 <p>
-위의 것을 <code>apply</code> 를 이용해 구현하면 아래와 같다.
+위의 것을 <code>apply</code> 를 이용해 <a href="implementation.html">구현</a>하면 아래와 같다.
 </p>
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #a9a1e1;">apply</span> <span style="color: #51afef;">#'</span><span style="color: #ECBE7B;">+</span> <span style="color: #51afef;">'</span><span style="color: #c678dd;">(</span><span style="color: #da8548; font-weight: bold;">1</span> <span style="color: #da8548; font-weight: bold;">2</span> <span style="color: #da8548; font-weight: bold;">3</span><span style="color: #c678dd;">)</span><span style="color: #51afef;">)</span>
@@ -234,9 +234,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgfd41a96" class="outline-3">
-<h3 id="orgfd41a96">Character</h3>
-<div class="outline-text-3" id="text-orgfd41a96">
+<div id="outline-container-org0fa3f8f" class="outline-3">
+<h3 id="org0fa3f8f">Character</h3>
+<div class="outline-text-3" id="text-org0fa3f8f">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -252,9 +252,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4f6af6a" class="outline-3">
-<h3 id="org4f6af6a">setq vs setq-default</h3>
-<div class="outline-text-3" id="text-org4f6af6a">
+<div id="outline-container-org6256153" class="outline-3">
+<h3 id="org6256153">setq vs setq-default</h3>
+<div class="outline-text-3" id="text-org6256153">
 <p>
 <a href="emacs.html">Emacs</a>에는 버퍼 로컬 변수라는 개념이 있다. 예를 들자면
 <code>tab-width</code> 가 대표적인데, 각 버퍼의 메이저 모드마다 이 변수의 값이 다 다를 수
@@ -272,9 +272,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7d78a0c" class="outline-3">
-<h3 id="org7d78a0c">Comma and Back-Quote</h3>
-<div class="outline-text-3" id="text-org7d78a0c">
+<div id="outline-container-org623830c" class="outline-3">
+<h3 id="org623830c">Comma and Back-Quote</h3>
+<div class="outline-text-3" id="text-org623830c">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> a <span style="color: #98be65;">"a's value"</span> b <span style="color: #98be65;">"b's value"</span> c <span style="color: #98be65;">"c's value"</span><span style="color: #51afef;">)</span>
 <span style="color: #51afef;">'</span><span style="color: #51afef;">(</span>a  b  c<span style="color: #51afef;">)</span>      <span style="color: #5B6268;">; </span><span style="color: #5B6268;">=&gt; (a b c)</span>
@@ -289,13 +289,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org17de394" class="outline-2">
-<h2 id="org17de394">코드 예제</h2>
-<div class="outline-text-2" id="text-org17de394">
+<div id="outline-container-org7ce6672" class="outline-2">
+<h2 id="org7ce6672">코드 예제</h2>
+<div class="outline-text-2" id="text-org7ce6672">
 </div>
-<div id="outline-container-org2986720" class="outline-3">
-<h3 id="org2986720">타입 변환</h3>
-<div class="outline-text-3" id="text-org2986720">
+<div id="outline-container-orgadde3c8" class="outline-3">
+<h3 id="orgadde3c8">타입 변환</h3>
+<div class="outline-text-3" id="text-orgadde3c8">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -313,9 +313,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-orgd4c19b7" class="outline-3">
-<h3 id="orgd4c19b7"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-orgd4c19b7">
+<div id="outline-container-org49ca1b5" class="outline-3">
+<h3 id="org49ca1b5"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-org49ca1b5">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -343,13 +343,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org2d24ab5" class="outline-2">
-<h2 id="org2d24ab5">에러 노트</h2>
-<div class="outline-text-2" id="text-org2d24ab5">
+<div id="outline-container-orgdcd62d2" class="outline-2">
+<h2 id="orgdcd62d2">에러 노트</h2>
+<div class="outline-text-2" id="text-orgdcd62d2">
 </div>
-<div id="outline-container-org4d682d5" class="outline-3">
-<h3 id="org4d682d5">commandp</h3>
-<div class="outline-text-3" id="text-org4d682d5">
+<div id="outline-container-orga0ba007" class="outline-3">
+<h3 id="orga0ba007">commandp</h3>
+<div class="outline-text-3" id="text-orga0ba007">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -369,9 +369,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-orgbdd7280" class="outline-3">
-<h3 id="orgbdd7280">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-orgbdd7280">
+<div id="outline-container-orgc0bafef" class="outline-3">
+<h3 id="orgc0bafef">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-orgc0bafef">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -433,14 +433,14 @@ Unused lexical argument 'bar'
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 22일 수정</div>
+2020년 4월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
 </div>
