--- a/note/macos.html
+++ b/note/macos.html
@@ -72,9 +72,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org15ed514">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgd4e77e0">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgcc22280">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org5c18b40">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org8ecbe78">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org92c7178">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -99,17 +99,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org15ed514" class="outline-2">
-<h2 id="org15ed514">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org15ed514">
+<div id="outline-container-org5c18b40" class="outline-2">
+<h2 id="org5c18b40">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org5c18b40">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgd4e77e0" class="outline-2">
-<h2 id="orgd4e77e0">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgd4e77e0">
+<div id="outline-container-org8ecbe78" class="outline-2">
+<h2 id="org8ecbe78">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org8ecbe78">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -129,9 +129,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgcc22280" class="outline-2">
-<h2 id="orgcc22280">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgcc22280">
+<div id="outline-container-org92c7178" class="outline-2">
+<h2 id="org92c7178">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org92c7178">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -176,6 +176,20 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<div class="article-link-date">
+2020년 4월 25일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 25일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
@@ -227,13 +241,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
@@ -258,13 +265,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
 2020년 4월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
 </div>
 </div>
 <div class="article-link">
